# leptos-daisyui-rs

./: .gitignore  .rust-analyzer-ignore  CLAUDE.md  Cargo.toml  Component_Development.md  Component_Library.md  DEMO_QA_ISSUES.md  Gantt_Component.md  Gantt_Development_Plan.md  Gantt_Feature_Gaps.md  Gantt_Verification_Report.md  LAUNCHER.md  LICENSE  Makefile.toml  QUICK_START.md  README.md  TABLE_COMPARISON.md  TESTING_PLAN.md  TESTING_README.md  THAW_COMPARISON.md  THAW_IMPLEMENTATION_PLAN.md  THEMING_BEADS_STRUCTURE.md  THEMING_STRATEGY.md  UPSTREAM_CONTRIBUTIONS.md  index.html  launcher.ps1  leptos-daisyui-showcase-5f44b9418973d04d.js  leptos-daisyui-showcase-5f44b9418973d04d_bg.wasm  output-67e47976d0f40891.css  run-automated-tests.md  spec.md  test-demo.md
.beads/: issues.jsonl
.claude/: test-ui-agent-template.md  test-ui-sub-agent-prompt.txt  visual-ui-testing-guide.md
.claude/rules/: README.md  code-review.md  component-completion.md  components.md  documentation.md  git-commit.md  pre-commit.md  rust.md  task-workflow.md  testing.md
.claude/skills/: check-style-guide.md  create-component-docs.md  create-components.md  install-component-guide.md
.claude/skills/create-component-docs/: SKILL.md
.github-issues/: 01-CRITICAL-RadialProgress-Compilation-Error.md  02-README-Doctest-Failures.md  03-Link-Component-href-Security-UX.md  04-ClassAttributes-Performance.md  05-Documentation-Typos.md  ACCORDION_FIXES_2026-01-29.md  CAROUSEL_AUTO_PLAY_COMPLETE_2026-01-29.md  DOCK_EXAMPLES_COMPLETE_2026-01-29.md  DRAWER_ANIMATION_FIX_2026-01-29.md  FAB_FLOWER_LAYOUT_FIX_2026-01-29.md  FILE_INPUT_PREVIEW_COMPLETE_2026-01-29.md  README-HOW-TO-SUBMIT.md
.github/workflows/: depoly.yml  rust.yml
demo/: .gitignore  Cargo.toml  README.md  Trunk.toml  custom-components.css  index.html  input.css  package-lock.json  package.json
demo-macros/: Cargo.toml  build.rs
demo-macros/src/: lib.rs  markdown.rs
demo/src/: lib.rs  main.rs
demo/src/core/: content_layout.rs  demo_macro.rs  demo_section.rs  layout.rs  markdown_renderer.rs  mod.rs  section.rs
demo/src/demos/: accordion.rs  alert.rs  auto_complete.rs  avatar.rs  badge.rs  base_theme_selector.rs  breadcrumbs.rs  button.rs  calendar.rs  card.rs  carousel.rs  chat.rs  checkbox.rs  collapse.rs  color_picker.rs  component_customizer.rs  config_provider.rs  countdown.rs  data_table.rs  diff.rs  divider.rs  dock.rs  drawer.rs  dropdown.rs  fab.rs  fieldset.rs  file_input.rs  filter.rs  footer.rs  gantt.rs  hero.rs  hover_3d.rs  hover_gallery.rs  icon.rs  indicator.rs  input.rs  join.rs  kanban.rs  kbd.rs  label.rs  (+39 more)
doc/: QUICK_START.md  README.md  THEMING.md
doc/components/: accordion.md  alert.md  avatar.md  badge.md  breadcrumbs.md  button.md  card.md  carousel.md  chat.md  checkbox.md  collapse.md  countdown.md  diff.md  divider.md  input.md  kanban_component.md  modal.md
doc/testing/: CHROME_DEVTOOLS_TESTING.md  README.md  TEST_PLAN.md
leptos-daisyui-cli/: Cargo.toml
leptos-daisyui-cli/assets/: component_metadata.json  utils.rs
leptos-daisyui-cli/src/: lib.rs  main.rs
leptos-daisyui-cli/src/commands/: add.rs  css.rs  init.rs  list.rs  mod.rs
leptos-daisyui-cli/src/component/: generator.rs  mod.rs  registry.rs
leptos-daisyui-cli/src/css/: manager.rs
leptos-daisyui-cli/src/install/: leptos.rs  mod.rs  tailwind.rs  trunk.rs
leptos-daisyui-cli/src/project/: detector.rs
leptos-daisyui-cli/src/utils/: error.rs  mod.rs  prompt.rs
leptos-daisyui-rs/: README.md
leptos-daisyui-rs/src/: css.rs  lib.rs
leptos-daisyui-rs/stytles/: daisyui-components.css
src/: lib.rs
src/components/: mod.rs
src/theme/: css_injection.rs  export_import.rs  mod.rs  provider.rs  storage.rs  tests.rs  types.rs  utils.rs
src/utils/: class_attribute.rs
stytles/: daisyui-components.css
test-merge-classes/: Cargo.toml
tests/visual/: run_visual_tests.md
(+409 files in other folders)
