[package]
name = "leptos-daisyui-rs"
description = "daisyUI Components for Leptos"
version = "0.0.3"
edition = "2024"
license = "MIT"
authors = ["noshishiRust <nopenoshishi@gmail.com>"]
readme = "README.md"
repository = "https://github.com/noshishiRust/leptos-daisyui-rs"

[dependencies]
leptos = { version = "0.8" }
table-rs = { path = "../table-rs" }
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["Element", "DomRect", "HtmlElement", "HtmlCollection", "NodeList"] }
