[package]
name = "leptos-daisyui-showcase"
version = "0.1.0"
edition = "2024"

[dependencies]
leptos-daisyui-rs = { path = "../" }

leptos = { version = "0.8", features = ["csr"] }
leptos_router = "0.8"
leptos_icons = "0.6.1"
leptos-use = "0.16.2"
leptos_meta = "0.8.4"
icondata = "0.6.0"

wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["File", "FileList", "FileReader", "HtmlInputElement"] }

console_log = "1.0.0"
console_error_panic_hook = "0.1.7"
log = "0.4.27"
